7.0.0 (SNAPSHOT)
 - added function `STR esc(STR)`
 - fixed build under JDK 9+
 - XML functions work through embedded [Apache Xalan](https://xalan.apache.org/) and [Apache Xerces](http://xerces.apache.org/)
 - minimal needed Java version changed to 1.8
 - refactoring

6.1.4 (16 jun 2018)
 - removed dependencies to meta packages (their sources moved into project) #19

6.1.3 (29 apr 2018)
 - added automatic module name `igormaznitsa.jcp`
 - CORE: added `/U` key to turn on mode to interpret unknown variables as FALSE (in Maven and ANT `unknownVarAsFalse`), [#17](https://github.com/raydac/java-comment-preprocessor/issues/17)

6.1.2 (02 apr 2017)
 - CORE: added STR TRIMLINES(STR) function to trim lines represented as string and removing empty lines
 - CORE: added `/A` command line option (`copyFileAttributes` in Maven and ANT) to copy file attributes
 - CORE: added `/ED:` command line option to exclude sub-folders from preprocessing (`excludedFolders` in Maven and ANT) with ANT pattern support.
 - CORE: added `/PI` command line flag (`preserveIndent` in Maven and ANT), turn on mode to preserve indent when removing `//$` and `//$$`, thanks to @jamuir
 - CORE: comma in split lines in BINFILE function moved from the start of line to the end of the previous line (to increase compatibility with Go)

6.1.1 (11 feb 2017)
 - MAVEN: information about imported maven properties will be shown only in either verbose mode or debug mode
 - MAVEN: added auxiliary goal `preprocessTests` which provides flag `useTestSources` as true and activated by default in GENERATE_TEST_SOURCES phase #14
 - MAVEN: added 'ignoreMissingSources' boolean parameter, allows to skip preprocessing if source folders not found or not provided #12
 - MAVEN: added 'skip'boolean parameter, it allows to skip execution, also it is possible to use `-Djcp.preprocess.skip=true` #13