@@ -2,7 +2,7 @@ Mind Map generated by NB MindMap plugin
 > __version__=`1.1`,showJumps=`true`
 ---
 
-# JCP<br/>v 6\.1\.4
+# JCP<br/>v 7\.0\.0
 > mmd.emoticon=`teapot`
 
 
@@ -20,11 +20,9 @@ Mind Map generated by NB MindMap plugin
 > topicLinkUID=`155B0D1A29FA`
 
 
-### Gradle
+### Gradle plugin
 
-#### just use the ANT task<br/>in script
-- TOPIC
-<pre>155B0D1A29FA</pre>
+#### com\.igormaznitsa\.jcp
 
 ### Maven plugin<br/>\(MAVEN version\>=3\.0\)
 > topicLinkUID=`155B0A81B4AA`
